# leroi

./: CMakeLists.txt  README.md  setup.py
leroi/: __init__.py  leroi.py  qc.py
notebook/: example.ipynb
src/: main.cc
